--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       >
         <div
           id="hero-container"
-          class="max-w-4xl mx-auto px-6 pb-32 pt-6 flex flex-col sm:items-center sm:text-center sm:pt-12"
+          class="max-w-4xl mx-auto px-3 md:px-6 pb-32 pt-6 flex flex-col sm:items-center sm:text-center sm:pt-12"
         >
           <div
             id="version-text"
@@ -666,7 +666,7 @@
       <!-- step by step -->
       <div
         id="steps"
-        class="flex flex-col gap-6 px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8"
+        class="flex flex-col gap-6 px-3 md:px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8"
       >
         <h2 class="text-gray-800 text-5xl sm:font-semibold mb-14">
           How it works
@@ -901,7 +901,7 @@
         </div>
       </div>
       <!-- Bento grid -->
-      <div id="bento-grid" class="px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8">
+      <div id="bento-grid" class=" px-3 md:px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8">
         <h2 class="text-5xl sm:font-semibold mb-14">
           ToDesktop handles the details
         </h2>
@@ -990,7 +990,7 @@
       <!-- Companies features line -->
       <div
         id="features-line"
-        class="px-6 py-12 max-w-7xl mt-4 mx-auto lg:px-8 lg:mt-4"
+        class="px-3 md:px-6 py-12 max-w-7xl mt-4 mx-auto lg:px-8 lg:mt-4"
       >
         <div class="border rounded-lg overflow-hidden flex justify-center p-4">
           <div id="line-4" class="flex gap-8 p-6">
@@ -1040,13 +1040,13 @@
       <!-- Testimonials -->
       <div
         id="testimonials"
-        class="gap-6 px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8"
+        class="gap-6 px-3 md:px-6 py-12 max-w-7xl mt-16 mx-auto lg:px-8"
       >
         <h2 class="text-5xl sm:font-semibold mb-14">Customer stories</h2>
         <div class="rounded-xl border flex flex-col lg:flex-row items-end">
           <div id="left" class="flex flex-col gap-12 p-8">
             <div class="h-4">
-              <img src="../assets/images/asset 44.svg" alt="" />
+              <img src="./assets/images/asset 44.svg" alt="" />
             </div>
 
             <h3 class="text-xl leading-relaxed font-semibold">
@@ -1115,7 +1115,7 @@
             </div>
           </div>
           <div id="right">
-            <img class="pl-12" src="./assets/images/asset 46.png" alt="" />
+            <img class="" src="./assets/images/asset 46.png" alt="" />
           </div>
         </div>
         <div class="flex flex-col lg:flex-row justify-between gap-4 mt-6">
@@ -1266,9 +1266,9 @@
         </div>
       </div>
       <!-- bulding -->
-      <div id="bulding" class="px-6 py-12 max-w-7xl mt-8 mx-auto lg:px-8">
-        <div class="rounded-xl bg-black flex flex-col lg:flex-row py-3">
-          <div id="left" class="flex flex-col gap-4 p-8">
+      <div id="bulding" class="bg-black px-3  md:px-6 py-12 max-w-7xl mt-8 mx-auto lg:px-8">
+        <div class="rounded-xl  flex flex-col lg:flex-row py-3 gap-6">
+          <div id="left" class="flex flex-col gap-4">
             <span class="text-gray-400 font-medium"
               >Ready to start building?</span
             >
@@ -1295,12 +1295,12 @@
             </p>
           </div>
           <div id="right">
-            <img class="pl-12" src="./assets/images/asset 46.png" alt="" />
+            <img class="" src="./assets/images/asset 46.png" alt="" />
           </div>
         </div>
       </div>
       <!-- Pricing -->
-      <div id="pricing" class="px-6 py-12 max-w-7xl mx-auto lg:px-8">
+      <div id="pricing" class="px-3 md:px-6 py-12 max-w-7xl mx-auto lg:px-8">
         <h2 class="max-w-2xl text-5xl leading-normal sm:font-semibold">
           Choose a plan that fits your needs
         </h2>
@@ -1441,9 +1441,9 @@
         </div>
       </div>
       <!-- Enterprices -->
-      <div id="enterprices-section" class="px-6 py-12 max-w-7xl mt-8 mx-auto">
+      <div id="enterprices-section" class="bg-black px-3 md:px-6 py-12 max-w-7xl mt-8 mx-auto">
         <div
-          class="bg-black p-8 rounded-xl flex flex-col gap-6 md:flex-row justify-between"
+          class=" rounded-xl flex flex-col gap-6 md:flex-row justify-between"
         >
           <div id="left-enterprices" class="text-white flex flex-col gap-6">
             <p class="uppercase font-medium">
@@ -1497,7 +1497,7 @@
         </div>
       </div>
       <!-- FAQs -->
-      <div id="faq" class="px-6 py-10 max-w-7xl mt-8 mx-auto lg:px-8">
+      <div id="faq" class="px-3 md:px-6 py-10 max-w-7xl mt-8 mx-auto lg:px-8">
         <h2 class="text-5xl leading-normal font-semibold max-w-2xl">FAQs</h2>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-3 items-start">
           <div class="group rounded-xl border p-6 border-gray-200 bg-gray-50 cursor-pointer" id="accordian">
@@ -1635,7 +1635,7 @@
         </div>
       </div>
     </main>
-    <footer class="px-6 py-12 max-w-7xl mt-8 mx-auto lg:px-8 ">
+    <footer class="px-3 md:px-6 py-12 max-w-7xl mt-8 mx-auto lg:px-8 ">
       <div class="rounded-lg border lg:border-none bg-gray-50 flex flex-col lg:flex-row-reverse items-center px-8 py-12 gap-8">
         <a class=" font-light" href="#">Documentation</a>
         <div class="flex gap-8 text-lg">
